[package]
name = "bytes_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["framework"] }
poise = "0.6"
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
chrono = "0.4"
rand = "0.8"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-format = "0.4.4"
warp = "0.3"

[build-dependencies]
tokio = { version = "1.36", features = ["full"] }
